--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -83,8 +83,8 @@
 				There will be three exercise sheets in total, the first two will cover topics related to the fundamental group, while the third one will deal with homology.<br/>
 				<ul>
 					<li><a href=" ">Sheet 1</a> (available on 2020-11-12)</li>
-					<li><a href=" ">Sheet 2</a> (available in 2020-11-26)</li>
-					<li><a href=" ">Sheet 3</a> (available in 2020-12-10)</li>
+					<li><a href=" ">Sheet 2</a> (available on 2020-11-26)</li>
+					<li><a href=" ">Sheet 3</a> (available on 2020-12-10)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
