--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -77,14 +77,19 @@
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
 				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
+				<b>Example notes:</b> These are some of the examples we looked at for simplicial homology:.<br/>
+				<ul>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology.pdf">Starting example from the course</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology2.pdf">Example 2.10 from the course</a></li>
+				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
 				<h4>Exercises:</h4>
 				There will be three exercise sheets in total, the first two will cover topics related to the fundamental group, while the third one will deal with homology.<br/>
 				<ul>
 					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1.pdf">Sheet 1</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1-solutions.pdf">Solutions</a>)</li>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Sheet 2</a> (available on 2020-11-26)</li>
-					<li><a href=" ">Sheet 3</a> (available on 2020-12-10)</li>
+					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Sheet 2</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2-solutions.pdf">Solutions</a>)</li>
+					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet3.pdf">Sheet 3</a> (available on 2020-12-10)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
