--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -74,6 +74,10 @@
 				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
 				In this section we will discuss the definition of the fundamental group. We will also go into details about the fundamental group of spheres and look at various applications of this result. Finally we will discuss the van Kampen theorem, the main tool to calculate fundamental groups of spaces by splitting the space up into smaller pieces. We will also go into some details about covering spaces of certain connected spaces and how these are related to the fundamental group.<br/>
 				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
+				<b>Example notes:</b> These are some of the examples for applications of the van Kampen Theorem:.<br/>
+				<ul>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-vanKampen">Examples 1.50 to 1.54 for the application of the van Kampen Theorem</a></li>
+				</ul>
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
 				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
@@ -81,6 +85,10 @@
 				<ul>
 					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology.pdf">Starting example from the course</a></li>
 					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology2.pdf">Example 2.10 from the course</a></li>
+				</ul>
+				<b>Additional notes:</b> These are some additional notes for the proof of the Theorem for the long exact sequence of homology:.<br/>
+				<ul>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-longexactsequenceofhomology">Long exact sequence of homology</a></li>
 				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
