--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -76,7 +76,7 @@
 				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
 				<b>Example notes:</b> These are some of the examples for applications of the van Kampen Theorem:.<br/>
 				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-vanKampen">Examples 1.50 to 1.54 for the application of the van Kampen Theorem</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-vanKampen.pdf">Examples 1.50 to 1.54 for the application of the van Kampen Theorem</a></li>
 				</ul>
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
@@ -88,7 +88,7 @@
 				</ul>
 				<b>Additional notes:</b> These are some additional notes for the proof of the Theorem for the long exact sequence of homology:.<br/>
 				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-longexactsequenceofhomology">Long exact sequence of homology</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-longexactsequenceofhomology.pdf">Long exact sequence of homology</a></li>
 				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
