--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -66,8 +66,8 @@
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
 				<h4>Time and place:</h4>
-				<p><b>Thursday:</b> 18:30 - 20:05 in 理学 C207 (First lecture will be on October 29th.)</p>			
-				<p><b>Friday:</b> 13:20 - 14:55 in 理学 C207</p>			
+				<p><b>Thursday:</b> 18:30 - 20:05 in 理学 C207 (First lecture on October 29th.)</p>			
+				<p><b>Friday:</b> 13:20 - 14:55 in 理学 C207 (Final lecture on December 18th.)</p>			
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space, homology groups, and finally cohomology groups.</p>
