--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -65,6 +65,9 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
+				<h5>Exam:</h5>
+				<p><b>Thursday, January 21st:</b> 18:00 - 21:00 in Building 1, room 108</p>			
+				<br/>
 				<h4>Time and place:</h4>
 				<p><b>Thursday:</b> 18:30 - 20:05 in 理学 C207 (First lecture on October 29th.)</p>			
 				<p><b>Friday:</b> 13:20 - 14:55 in 理学 C207 (Final lecture on December 18th.)</p>			
