--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
+<style>
+	.redtext {
+		color: red;
+	}
+</style>
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
@@ -65,7 +71,7 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
-				<h5>Exam:</h5>
+				<h3 class="redtext">Exam:</h3>
 				<p><b>Thursday, January 21st:</b> 18:00 - 21:00 in Building 1, room 108</p>			
 				<br/>
 				<h4>Time and place:</h4>
