hints and remarks

--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -73,6 +73,10 @@
   			<div class="card-body">
 				<h3 class="redtext">Exam:</h3>
 				<p><b>Thursday, January 21st:</b> 18:00 - 21:00 in Building 1, room 108</p>			
+				<h4><a href="https://michaelehrig.github.io/lectures/notes/top2-examhints.pdf">Some hints and pointers for the exam</a></h4>
+				<br/>
+				<h3 class="redtext">Final assignment:</h3>
+				<p>The marked assignment number 3 can be collected in my office on any day between 9:00 and 18:00.</p>			
 				<br/>
 				<h4>Time and place:</h4>
 				<p><b>Thursday:</b> 18:30 - 20:05 in 理学 C207 (First lecture on October 29th.)</p>			
