--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -72,7 +72,7 @@
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
 				<h3 class="redtext">Exam:</h3>
-				<p><b>Thursday, January 21st:</b> 18:00 - 21:00 in Building 1, room 108</p>			
+				<p><b>Thursday, January 21st:</b> 18:00 - 21:00 in Building 1, room 108 (理教楼 108)</p>			
 				<h4><a href="https://michaelehrig.github.io/lectures/notes/top2-examhints.pdf">Some hints and pointers for the exam</a></h4>
 				<br/>
 				<h3 class="redtext">Final assignment:</h3>
@@ -110,7 +110,7 @@
 				<ul>
 					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1.pdf">Sheet 1</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1-solutions.pdf">Solutions</a>)</li>
 					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Sheet 2</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2-solutions.pdf">Solutions</a>)</li>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet3.pdf">Sheet 3</a> (available on 2020-12-10)</li>
+					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet3.pdf">Sheet 3</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet3-solutions.pdf">Solutions</a>)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
