--- a/lectures/ls-topology2-2020.html
+++ b/lectures/ls-topology2-2020.html
@@ -73,10 +73,6 @@
   			<div class="card-body">
 				<h3 class="redtext">Exam:</h3>
 				<p><b>Thursday, January 21st:</b> 18:00 - 21:00 in Building 1, room 108 (理教楼 108)</p>			
-				<h4><a href="https://michaelehrig.github.io/lectures/notes/top2-examhints.pdf">Some hints and pointers for the exam</a></h4>
-				<br/>
-				<h3 class="redtext">Final assignment:</h3>
-				<p>The marked assignment number 3 can be collected in my office on any day between 9:00 and 18:00.</p>			
 				<br/>
 				<h4>Time and place:</h4>
 				<p><b>Thursday:</b> 18:30 - 20:05 in 理学 C207 (First lecture on October 29th.)</p>			
@@ -87,37 +83,17 @@
 				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
 				In this section we will discuss the definition of the fundamental group. We will also go into details about the fundamental group of spheres and look at various applications of this result. Finally we will discuss the van Kampen theorem, the main tool to calculate fundamental groups of spaces by splitting the space up into smaller pieces. We will also go into some details about covering spaces of certain connected spaces and how these are related to the fundamental group.<br/>
 				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
-				<b>Example notes:</b> These are some of the examples for applications of the van Kampen Theorem:.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-vanKampen.pdf">Examples 1.50 to 1.54 for the application of the van Kampen Theorem</a></li>
-				</ul>
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
 				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
-				<b>Example notes:</b> These are some of the examples we looked at for simplicial homology:.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology.pdf">Starting example from the course</a></li>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology2.pdf">Example 2.10 from the course</a></li>
-				</ul>
-				<b>Additional notes:</b> These are some additional notes for the proof of the Theorem for the long exact sequence of homology:.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-longexactsequenceofhomology.pdf">Long exact sequence of homology</a></li>
-				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
-				<h4>Exercises:</h4>
-				There will be three exercise sheets in total, the first two will cover topics related to the fundamental group, while the third one will deal with homology.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1.pdf">Sheet 1</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1-solutions.pdf">Solutions</a>)</li>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Sheet 2</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2-solutions.pdf">Solutions</a>)</li>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet3.pdf">Sheet 3</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet3-solutions.pdf">Solutions</a>)</li>
-				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2020-11-20</b></li>
-					<li>Written report on sheet 2: Applications of the fundamental group,  <b>Deadline: 2020-12-04</b></li>
-					<li>Written report on sheet 3: Homology groups,  <b>Deadline: 2020-12-18</b></li>
+					<li>Written report on sheet 1: Basics on topology and the fundamental group</li>
+					<li>Written report on sheet 2: Applications of the fundamental group</li>
+					<li>Written report on sheet 3: Homology groups</li>
 					<li>Written exam after the end of the course</li>
 				</ul>
 				Each exercise report will make up 20% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
