--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
 		<div class="card border-info">
 			<div class="card-header"><h3>Teaching in 2021</h3></div>
   			<div class="card-body">
-				<p><b>Algebra 2 - 代数学（模块2）</b>: <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2021.html">Course informations</a></p>
+				<p><b>Topology 2 - 拓扑学（模块2）</b>: <a href="https://michaelehrig.github.io/lectures/ls-topology2-2021.html">Course informations</a></p>
   			</div>
 		</div>
 	</div>
@@ -76,7 +76,8 @@
 			<div class="card-header"><h3>Beijing Institute of Technology</h3></div>
   			<div class="card-body">
 				<ul>
-				    <li><b>Topology 2 - 拓扑学（模块2）</b>: <a href="https://michaelehrig.github.io/lectures/ls-topology2.html">Course informations</a></li>
+					<li><b>Algebra 2 - 代数学（模块2）</b>: <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2021.html">Course informations</a></li>
+				    <li><b>Topology 2 - 拓扑学（模块2）</b>: <a href="https://michaelehrig.github.io/lectures/ls-topology2-2020.html">Course informations</a></li>
 					<li><b>Algebra 2 - 代数学（模块2）</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2020.html">Course informations</a></li>
 					<li><b>Algebraic geometry and algebraic groups</b>, <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></li>
 					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></li>
