--- a/lectures/ls-topology2-2020.html
+++ b/lectures/ls-topology2-2020.html
@@ -89,14 +89,7 @@
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
 				<h4>Examination:</h4>
-				<p>The final mark for the lecture will be comprised of the following parts:
-				<ul>
-					<li>Written report on sheet 1: Basics on topology and the fundamental group</li>
-					<li>Written report on sheet 2: Applications of the fundamental group</li>
-					<li>Written report on sheet 3: Homology groups</li>
-					<li>Written exam after the end of the course</li>
-				</ul>
-				Each exercise report will make up 20% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
+				<p>The final mark for the lecture will be comprised of the following parts 60% from the reports on the exercise sheets and 40% from the final exam. The exercise reports can be handed in on paper or via email (in English).</p>
 				<p></p>	
 				<h4>References:</h4>
 				<p class="card-text">The course will mostly use the following reference.<br/>
