--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -74,8 +74,8 @@
 				<h3 class="redtext">Exam:</h3>
 				<p><b>TBA</b></p>			
 				<h4>Time and place:</h4>
-				<p><b>Thursday:</b>  -  in  (First lecture on 2021-09-16.)</p>			
-				<p><b>Friday:</b>  - in  (Final lecture on 2021-11-05.)</p>			
+				<p><b>Thursday:</b> 18:30 - 20:05 in 文二楼 126 (First lecture on 2021-09-16.)</p>			
+				<p><b>Friday:</b> 15：15 - 16：50 in 文二楼 126 (Final lecture on 2021-11-05.)</p>			
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space and homology groups, with a small outlook at cohomology groups at the end.</p>
