--- a/teaching.html
+++ b/teaching.html
@@ -76,7 +76,7 @@
 			<div class="card-header"><h3>Beijing Institute of Technology</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Algebra 2 - 代数学（模块2） -2021 </b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2021.html">Course informations</a></li>
+					<li><b>Algebra 2 - 代数学（模块2） - 2021</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2021.html">Course informations</a></li>
 				    <li><b>Topology 2 - 拓扑学（模块2） - 2020</b>, <a href="https://michaelehrig.github.io/lectures/ls-topology2-2020.html">Course informations</a></li>
 					<li><b>Algebra 2 - 代数学（模块2） - 2020</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2020.html">Course informations</a></li>
 					<li><b>Algebraic geometry and algebraic groups</b>, <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></li>
