--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<div class="card-header"><h3>Michael Ehrig, Ph.D., Associate Professor</h3></div>
 					<p class="card-text"></p>
 					<p class="card-text"><b>Address:</b><br/>
-					Office 406-3<br/>
+					Office: 文二楼907E<br/>
 					School of Mathematics and Statistics <br/>
 					Beijing Institute of Technology<br/>
 					Liangxiang campus, Fangshan District <br/>
