--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -88,6 +88,10 @@
 				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
 				In this section we will discuss the definition of the fundamental group. We will also go into details about the fundamental group of spheres and look at various applications of this result. Finally we will discuss the van Kampen theorem, the main tool to calculate fundamental groups of spaces by splitting the space up into smaller pieces. We will also go into some details about covering spaces of certain connected spaces and how these are related to the fundamental group.<br/>
 				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
+				<b>Notes for chapter 1:</b> Below are notes for some important parts of the lecture.<br/>
+				<ul>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-fundamental_group_circle.pdf">Fundamental group of the circle</a></li>
+				</ul>
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
 				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
