--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -75,7 +75,7 @@
 				<p><b>TBA</b></p>			
 				<h4>Time and place:</h4>
 				<p><b>Thursday:</b> 18:30 - 20:05 in 文二楼 126 (First lecture on 2021-09-16.)</p>			
-				<p><b>Friday:</b> 15:15 - 16:50 in 文二楼 126 (Final lecture on 2021-11-05.)</p>			
+				<p><b>Friday:</b> 15:15 - 16:50 in 文二楼 126 (Final lecture on 2021-11-12.)</p>			
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space and homology groups, with a small outlook at cohomology groups at the end.</p>
@@ -100,14 +100,14 @@
 				<h4>Exercises:</h4>
 				There will be two exercise sheets in total, the first will cover topics related to the fundamental group, while the third one will deal with applications of the fundamental group and homology groups.<br/>
 				<ul>
-					<li><a href="">Exercise sheet 1</a> (will be available on 2021-09-30)</li>
-					<li><a href="">Exercise sheet 2</a> (will be available on 2021-10-21)</li>
+					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1.pdf">Exercise sheet 1</a></li>
+					<li><a href="">Exercise sheet 2</a> (will be available on 2021-10-28)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2021-10-10</b></li>
-					<li>Written report on sheet 2: Applications of the fundamental group and homology,  <b>Deadline: 2021-10-31</b></li>
+					<li>Written report on sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2021-10-17</b></li>
+					<li>Written report on sheet 2: Applications of the fundamental group and homology,  <b>Deadline: 2021-11-07</b></li>
 					<li>Written exam after the end of the course</li>
 				</ul>
 				Each exercise report will make up 30% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
