--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -90,7 +90,9 @@
 				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
 				<b>Notes for chapter 1:</b> Below are notes for some important parts of the lecture.<br/>
 				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-fundamental_group_circle.pdf">Fundamental group of the circle</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-fundamental_group_circle.pdf">Proof: Fundamental group of the circle</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-vanKampen.pdf">Proof: The van Kampen theorem</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-vanKampen.pdf">Examples and applications: van Kampen Theorem</a></li>
 				</ul>
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
