--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -100,6 +100,7 @@
 				<b>Notes for chapter 1:</b> Below are notes for some important parts of the lecture.<br/>
 				<ul>
 					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology.pdf">Basic idea behind homology</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology2.pdf">Examples for simplicial homology</a></li>
 				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
