--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -97,10 +97,11 @@
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
 				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
-				<b>Notes for chapter 1:</b> Below are notes for some important parts of the lecture.<br/>
+				<b>Notes for chapter 2:</b> Below are notes for some important parts of the lecture.<br/>
 				<ul>
 					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology.pdf">Basic idea behind homology</a></li>
 					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology2.pdf">Examples for simplicial homology</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-longexactsequenceofhomology.pdf">Long exact sequence of homology</a></li>
 				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
