--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -72,7 +72,7 @@
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
 				<h3 class="redtext">Exam:</h3>
-				<p><b>TBA</b></p>			
+				<p class="redtext"><b>18:30 - 20:30 in 文二楼 126 on Thursday 2021-12-09</b></p>			
 				<h4>Time and place:</h4>
 				<p><b>Thursday:</b> 18:30 - 20:05 in 文二楼 126 (First lecture on 2021-09-16.)</p>			
 				<p><b>Friday:</b> 15:15 - 16:50 in 文二楼 126 (Final lecture on 2021-11-12.)</p>			
@@ -109,7 +109,7 @@
 				There will be two exercise sheets in total, the first will cover topics related to the fundamental group, while the third one will deal with applications of the fundamental group and homology groups.<br/>
 				<ul>
 					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1.pdf">Exercise sheet 1</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1-solutions.pdf">Solutions</a>)</li>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Exercise sheet 2</a></li>
+					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Exercise sheet 2</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2-solutions.pdf">Solutions</a>)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
