--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -72,7 +72,8 @@
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
 				<h3 class="redtext">Exam:</h3>
-				<p class="redtext"><b>18:30 - 20:30 in 文二楼 126 on Thursday 2021-12-09</b></p>			
+				<p class="redtext"><b>18:30 - 20:30 in 文二楼 126 on Thursday 2021-12-09</b></p>	
+				<p>For any questions or to pick up marked assignment sheets, please come to my office in 文二楼 907E.</p>
 				<h4>Time and place:</h4>
 				<p><b>Thursday:</b> 18:30 - 20:05 in 文二楼 126 (First lecture on 2021-09-16.)</p>			
 				<p><b>Friday:</b> 15:15 - 16:50 in 文二楼 126 (Final lecture on 2021-11-12.)</p>			
