--- a/teaching.html
+++ b/teaching.html
@@ -80,7 +80,7 @@
 					<li><b>Algebra 2 - 代数学（模块2） - 2021</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2021.html">Course informations</a></li>
 				    <li><b>Topology 2 - 拓扑学（模块2） - 2020</b>, <a href="https://michaelehrig.github.io/lectures/ls-topology2-2020.html">Course informations</a></li>
 					<li><b>Algebra 2 - 代数学（模块2） - 2020</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2020.html">Course informations</a></li>
-					<li><b>Algebraic geometry and algebraic groups</b>, <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></li>
+					<li><b>Algebraic geometry - 代数几何 - 2019</b>, <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></li>
 					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></li>
 				</ul>
   			</div>
