--- a/lectures/ls-alggeometry-2022.html
+++ b/lectures/ls-alggeometry-2022.html
@@ -93,7 +93,7 @@
 				<p class="card-text"><b>Chapter 5+:</b><br/>
 				Depending on the progress of the lecture we will cover additional topics after the end of chapter 4.<br/>
 				<h4>Lecture notes:</h4>
-				There will be up-to date notes send out before the lectures of each week, covering the topic of the lectures.<br/>
+				There will be up-to date notes send out after the lecture on each Friday, covering the topic of the week’s lectures.<br/>
 				<h4>Exercises:</h4>
 				There will be two exercise sheets in total.<br/>
 				<ul>
