--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -80,20 +80,16 @@
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is the pdf-file exercise sheet for each of the first four chapters.</p>
 				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
 				In this section we discuss the basics in the theory of commutative algebras over an arbitrary base field. The main focus here are a number of very famous theorems from the late 19th and early 20th century, namely Noether's Normalisation theorem and Hilbert's Nullstellensatz and the Basis theorem.<br/>
-				<b>Prerequisites:</b> Rings and algebras over fields, ideals (including prime and maximal ideals), zero-divisors and nilpotent elements in a ring, modules for a ring, field extensions and algebraic closure of a field.<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet1.pdf">Sheet 1</a></p>
+				<b>Prerequisites:</b> Rings and algebras over fields, ideals (including prime and maximal ideals), zero-divisors and nilpotent elements in a ring, modules for a ring, field extensions and algebraic closure of a field.</p>
 				<p class="card-text"><b>Chapter 2: Algebraic sets</b><br/>
 				In this section we discuss the the concept of algebraic sets and the Zariski topology defined by them. We will also introduce the concept of the coordinate ring of an algebraic set and we will see how Hilbet's Nullstellensatz translates to these algebraic sets.<br/>
-				<b>Prerequisites:</b> Topology on a space, tensor product of vector spaces.<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet2.pdf">Sheet 2</a></p>
+				<b>Prerequisites:</b> Topology on a space, tensor product of vector spaces.</p>
 				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
 				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
-				<b>Prerequisites:</b> ---<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet3.pdf">Sheet 3</a></p>
+				<b>Prerequisites:</b> ---</p>
 				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
 				In this section we affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
-				<b>Prerequisites:</b> Groups, index of subgroups<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet4.pdf">Sheet 4</a></p>
+				<b>Prerequisites:</b> Groups, index of subgroups</p>
 				<p class="card-text"><b>Chapter 5 and beyond: Outlook</b><br/>
 				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
 				<h4>References:</h4>
