--- a/lectures/ls-topology2-2021.html
+++ b/lectures/ls-topology2-2021.html
@@ -83,41 +83,21 @@
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space and homology groups, with a small outlook at cohomology groups at the end.</p>
 				<p class="card-text"><b>Chapter 0: Preliminaries</b><br/>
 				We will start with a short revision of definitions and results from basic topology that will be needed. The main purpose here is just to fix notations and conventions for the rest of the course. A pdf with the notes for the preliminaries can be found below as we will go through them quite quickly.<br/>
-				<b>Notes for preliminaries:</b> These are the notes for the preliminaries. They include some basic definitions as well as the most basic examples that one should have in mind for everything we do later on in the course.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-preliminaries.pdf">Preliminaries</a></li>
-				</ul>
 				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
 				In this section we will discuss the definition of the fundamental group. We will also go into details about the fundamental group of spheres and look at various applications of this result. Finally we will discuss the van Kampen theorem, the main tool to calculate fundamental groups of spaces by splitting the space up into smaller pieces. We will also go into some details about covering spaces of certain connected spaces and how these are related to the fundamental group.<br/>
 				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
-				<b>Notes for chapter 1:</b> Below are notes for some important parts of the lecture.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-fundamental_group_circle.pdf">Proof: Fundamental group of the circle</a></li>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-vanKampen.pdf">Proof: The van Kampen theorem</a></li>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-vanKampen.pdf">Examples and applications: The van Kampen Theorem</a></li>
-				</ul>
 				<p class="card-text"><b>Chapter 2: Homology</b><br/>
 				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
 				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
-				<b>Notes for chapter 2:</b> Below are notes for some important parts of the lecture.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology.pdf">Basic idea behind homology</a></li>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-example-homology2.pdf">Examples for simplicial homology</a></li>
-					<li><a href="https://michaelehrig.github.io/lectures/notes/top2-longexactsequenceofhomology.pdf">Long exact sequence of homology</a></li>
-				</ul>
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
 				<h4>Exercises:</h4>
 				There will be two exercise sheets in total, the first will cover topics related to the fundamental group, while the third one will deal with applications of the fundamental group and homology groups.<br/>
-				<ul>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1.pdf">Exercise sheet 1</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet1-solutions.pdf">Solutions</a>)</li>
-					<li><a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2.pdf">Exercise sheet 2</a> (<a href="https://michaelehrig.github.io/lectures/exercises/top2-sheet2-solutions.pdf">Solutions</a>)</li>
-				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2021-10-17</b></li>
-					<li>Written report on sheet 2: Applications of the fundamental group and homology,  <b>Deadline: 2021-11-14</b></li>
+					<li>Written report on sheet 1: Basics on topology and the fundamental group</li>
+					<li>Written report on sheet 2: Applications of the fundamental group and homology</b></li>
 					<li>Written exam after the end of the course</li>
 				</ul>
 				Each exercise report will make up 30% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
