--- a/lectures/ls-algebra2-2020.html
+++ b/lectures/ls-algebra2-2020.html
@@ -65,9 +65,27 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Graduate course: Algebra 2 - 代数学（模块2）</h3></div>
   			<div class="card-body">
-				<h4>Time and place:</h4>
-				<p>The course will be taught as an online course in the BIT online teaching system.</p>
-				<p></p>
+				<h4>Time and place: online course, Spring Semester 2020</h4>
+				<br/>
+				<h4>Outline of the course:</h4>			
+				<p class="card-text">This course is an introduction to modern abstract algebra. The focus will be on properties of rings and modules over rings.</p>
+				<p>To formulate the content in a modern way we will give a small introduction into categories and homological algebra. All of these will be explained with examples for easy to understand rings and modules, like fields, the integers, or the polynomial ring.</p>
+				<p class="card-text"><b>Main goals of the course</b><br/>
+				<ul>
+					<li>Introduction of categories, functors and universal objects</li>
+					<li>Understanding the notions from part 1. in the context of modules over rings</li>
+					<li>Classifying modules over Division rings and linear algebra over division rings</li>
+					<li>Classifying modules over principal ideal domains and applications like the structure theorem for abelian groups and the Jordan normal form for matrices</li>
+					<li>Understanding the notions of simple, semi-simple, artinian, and noetherian rings and how they are related, as well as seeing examples for all of these classes of rings.</li>
+				</ul>
+				<h4>References:</h4>
+				<p class="card-text">We will not follow any specific book, but there will be updated lecture notes available after each lecture. For anyone that is interested in reading up on some more background or additional content, the following books contain various parts of the course:<br/>
+				<ul>
+					<li><i>Thomas W. Hungerford</i>: Algebra, Springer Graduate Texts in Mathematics Vol. 73</li>
+					<li><i>Serge Lang: Algebra</i>: Springer Graduate Texts in Mathematics Vol. 211</li>
+					<li><i>Robert B. Ash</i>: Basic Abstract Algebra: For Graduate Students and Advanced Undergraduates, Dover Publications</li>
+				</ul>
+				</p>
   			</div>
 		</div>
 	</div>
