--- a/lectures/ls-algebra2-2021.html
+++ b/lectures/ls-algebra2-2021.html
@@ -71,10 +71,7 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Algebra 2 - 代数学（模块2）</h3></div>
   			<div class="card-body">
-				<h4>Time and place:</h4>
-				<p><b>Thursday:</b> 13:20 - 14:55 in 理学 205 (First lecture on March 4th.)</p>			
-				<p><b>Friday:</b> 13:20 - 14:55 in 理学 205 (Final lecture on March 5th.)</p>			
-				<br/>
+				<h4>Time and place: online course, Spring Semester 2021</h4>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">This course is an introduction to modern abstract algebra. The focus will be on properties of rings and modules over rings.</p>
 				<p>To formulate the content in a modern way we will give a small introduction into categories and homological algebra. All of these will be explained with examples for easy to understand rings and modules, like fields, the integers, or the polynomial ring.</p>
