--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -65,6 +65,7 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Graduate course: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
+				<h4>Time and place: on campus, Fall Semester 2019</h4>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
