--- a/teaching.html
+++ b/teaching.html
@@ -65,8 +65,9 @@
 		<div class="card border-info">
 			<div class="card-header"><h3>Teaching in 2023</h3></div>
   			<div class="card-body">
-					<p><b>Algebra 2 - 代数学（模块2） - 2023</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2023.html">Course informations</a></p>
-					<p><b>Algebraic Geometry - 代数几何 - 2023 </b>: <a href="https://michaelehrig.github.io/lectures/ls-alggeometry-2023.html">Course informations</a></p>
+					<p>
+					<b>Algebra 2 - 代数学（模块2） - 2023</b>, <a href="https://michaelehrig.github.io/lectures/ls-algebra2-2023.html">Course informations</a></br>
+					<b>Algebraic Geometry - 代数几何 - 2023 </b>: <a href="https://michaelehrig.github.io/lectures/ls-alggeometry-2023.html">Course informations</a></p>
   			</div>
 		</div>
 	</div>
